--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Krish Nair",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "mongoose": "^5.6.0",
     "nodemon": "^1.19.1"
   }
 }
