--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Krish Nair",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.0",
